--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,10 @@
-caer==1.9.8
-dlib 
-imutils==0.5.4
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-keras-tuner==1.0.4
-matplotlib==3.2.2
-opencv-contrib-python==4.1.2.30
-opencv-python==4.1.2.30
-pandas==1.1.5
-Pillow==7.1.2
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-seaborn==0.11.2
-sklearn==0.0
-sklearn-pandas==1.8.0
-statsmodels==0.10.2
-streamlit==0.89.0
-sympy==1.7.1
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow == 2.6.0
-tensorflow-datasets==4.0.1
-tensorflow-estimator==2.6.0
-tensorflow-gcs-config==2.6.0
-tensorflow-hub==0.12.0
-tensorflow-metadata==1.2.0
-tensorflow-probability==0.13.0
+numpy == 1.19.5
+cv2  == 4.5.3
+caer == 1.9.8
+keras_tuner == 1.0.4
+sklearn ==  0.24.2
+tensorflow == 2.7.0-dev20210806
+streamlit == 0.89.0
+PIL == 8.3.1
+dlib == 19.22.0
+imutils == 0.5.4
