--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 numpy == 1.19.5
-opencv-contrib-python  == 4.5.3
+opencv-contrib-python  == 4.5.3.56
 caer == 1.9.8
 keras_tuner == 1.0.4
 sklearn ==  0.24.2
 tensorflow == 2.7.0-dev20210806
 streamlit == 0.89.0
-PIL == 8.3.1
+Pillow == 8.0.0
 dlib == 19.22.0
 imutils == 0.5.4
+tensorboard = 2.6.0
