--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ numpy == 1.19.5
 opencv-contrib-python  == 4.5.3.56
 caer == 1.9.8
 keras_tuner == 1.0.3
-sklearn ==  0.24
+scikit-learn == 0.24.2
+sklearn ==  0.0
 tensorflow == 2.7.0-dev20210806
 streamlit == 0.89.0
 Pillow == 8.0.0
