--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ caer == 1.9.8
 keras_tuner == 1.0.3
 scikit-learn == 0.24.2
 sklearn ==  0.0
-tensorflow == 2.7.0-dev20210806
+tensorflow == 2.6.0
 streamlit == 0.89.0
 Pillow == 8.0.0
 dlib == 19.22.0
