--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ sklearn ==  0.0
 tensorflow == 2.6.0
 streamlit == 0.89.0
 Pillow == 8.0.0
-cmake == 3.21.1
+cmake == 3.21.1.post1
 dlib == 19.22.0
 imutils == 0.5.4
 tensorboard == 2.6.0
