--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ scikit-learn == 0.24.2
 sklearn ==  0.0
 tensorflow == 2.6.0
 streamlit == 0.89.0
+streamlit-webrtc == 0.29.1
 Pillow == 8.0.0
 tensorboard == 2.6.0
