--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ streamlit == 0.89.0
 streamlit-webrtc == 0.29.1
 Pillow == 8.0.0
 tensorboard == 2.6.0
+aiortc==1.2.1
+av==8.0.3
+typing_extensions==3.10.0.2
